minor update add docling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "docling>=2.55.1",
     "groq>=0.32.0",
+    "langextract>=1.0.9",
     "nltk>=3.9.1",
     "numpy>=2.3.3",
     "openai>=1.109.1",
     "pydantic>=2.11.9",
-    "qdrant-client>=1.15.1",
+    "qdrant-client[fastembed]>=1.15.1",
     "rank-bm25>=0.2.2",
     "scikit-learn>=1.7.2",
     "sentence-transformers>=5.1.1",
